fixing small change in knn.ipynb

--- a/assignment1/knn.ipynb
+++ b/assignment1/knn.ipynb
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -500,56 +500,16 @@
       "Fold 2, K 100 => accuracy: 0.263000\n",
       "Fold 3, K 100 => accuracy: 0.256000\n",
       "Fold 4, K 100 => accuracy: 0.263000\n",
-      "k = 1, accuracy = 0.263000\n",
-      "k = 1, accuracy = 0.257000\n",
-      "k = 1, accuracy = 0.264000\n",
-      "k = 1, accuracy = 0.278000\n",
-      "k = 1, accuracy = 0.266000\n",
-      "k = 3, accuracy = 0.239000\n",
-      "k = 3, accuracy = 0.249000\n",
-      "k = 3, accuracy = 0.240000\n",
-      "k = 3, accuracy = 0.266000\n",
-      "k = 3, accuracy = 0.254000\n",
-      "k = 5, accuracy = 0.248000\n",
-      "k = 5, accuracy = 0.266000\n",
-      "k = 5, accuracy = 0.280000\n",
-      "k = 5, accuracy = 0.292000\n",
-      "k = 5, accuracy = 0.280000\n",
-      "k = 8, accuracy = 0.262000\n",
-      "k = 8, accuracy = 0.282000\n",
-      "k = 8, accuracy = 0.273000\n",
-      "k = 8, accuracy = 0.290000\n",
-      "k = 8, accuracy = 0.273000\n",
-      "k = 10, accuracy = 0.265000\n",
-      "k = 10, accuracy = 0.296000\n",
-      "k = 10, accuracy = 0.276000\n",
-      "k = 10, accuracy = 0.284000\n",
-      "k = 10, accuracy = 0.280000\n",
-      "k = 12, accuracy = 0.260000\n",
-      "k = 12, accuracy = 0.295000\n",
-      "k = 12, accuracy = 0.279000\n",
-      "k = 12, accuracy = 0.283000\n",
-      "k = 12, accuracy = 0.280000\n",
-      "k = 15, accuracy = 0.252000\n",
-      "k = 15, accuracy = 0.289000\n",
-      "k = 15, accuracy = 0.278000\n",
-      "k = 15, accuracy = 0.282000\n",
-      "k = 15, accuracy = 0.274000\n",
-      "k = 20, accuracy = 0.270000\n",
-      "k = 20, accuracy = 0.279000\n",
-      "k = 20, accuracy = 0.279000\n",
-      "k = 20, accuracy = 0.282000\n",
-      "k = 20, accuracy = 0.285000\n",
-      "k = 50, accuracy = 0.271000\n",
-      "k = 50, accuracy = 0.288000\n",
-      "k = 50, accuracy = 0.278000\n",
-      "k = 50, accuracy = 0.269000\n",
-      "k = 50, accuracy = 0.266000\n",
-      "k = 100, accuracy = 0.256000\n",
-      "k = 100, accuracy = 0.270000\n",
-      "k = 100, accuracy = 0.263000\n",
-      "k = 100, accuracy = 0.256000\n",
-      "k = 100, accuracy = 0.263000\n"
+      "k = 1, mean accuracy = 0.265600\n",
+      "k = 3, mean accuracy = 0.249600\n",
+      "k = 5, mean accuracy = 0.273200\n",
+      "k = 8, mean accuracy = 0.276000\n",
+      "k = 10, mean accuracy = 0.280200\n",
+      "k = 12, mean accuracy = 0.279400\n",
+      "k = 15, mean accuracy = 0.275000\n",
+      "k = 20, mean accuracy = 0.279000\n",
+      "k = 50, mean accuracy = 0.274400\n",
+      "k = 100, mean accuracy = 0.261600\n"
      ]
     }
    ],
@@ -619,8 +579,7 @@
     "\n",
     "# Print out the computed accuracies\n",
     "for k in sorted(k_to_accuracies):\n",
-    "    for accuracy in k_to_accuracies[k]:\n",
-    "        print('k = %d, accuracy = %f' % (k, accuracy))"
+    "    print('k = %d, mean accuracy = %f' % (k,  np.mean(k_to_accuracies[k])))"
    ]
   },
   {
